feat(config): 配置 Qwen 模型及 AI Agent 技能
- 新增 Qwen 模型相关的环境变量配置：`QWEN_API_KEY` 和 `QWEN_BASE_URL`。
- 新增 `frontend-bot` 和 `lib-maintainer` 两个 AI Agent 的配置文件。
- 新增 `lib-build-verify` 和 `verify-frontend` 两个 AI Agent 的技能描述文件。
- 更新 `.env.example` 以包含 Qwen 配置和 `NODE_ENV`。
- 移除 `apps/web/src/app/api/generate/route_new.ts` 文件。
- 调整 AI 模型在 `generate/route.ts` 中的读取方式，支持环境变量和 `import.meta.env`。
- 优化 `apps/web/package.json` 引入 `zod` 依赖。
- 移除 `apps/web/src/components/registry.ts` 中部分组件的引用。
- 调整 `apps/web/src/lib/qwen.ts` 中的 API Key 和 Base URL 读取方式。
- 调整 `apps/web/src/main.ts` 中全局组件注册方式。
- 优化 `apps/web/vite.config.ts` 引入 `apiRoutes` 插件。
- 新增 `packages/core/src/errors.ts` 和 `packages/core/src/logger.ts` 用于错误处
  理和日志记录。
- 更新 `packages/design-system/package.json` 以支持组件导入。
- 调整 `packages/design-system/src/composables/useGlass.ts` 以支持样式获取。
- 移除 `packages/design-system/src/index_fixed.ts`。
- 更新 `packages/vue/package.json` 以支持组件导入。
- 调整 `packages/vue/src/components/ConfirmDialog.vue` 以从
  `@vue-json-render/design-system/components` 导入 `GlassButton`。
- 调整 `packages/vue/src/components/Renderer.vue` 的 `defineComponent` 导入方
  式。
- 调整 `packages/vue/src/index.ts` 中组件的引用注释。
- 调整 `packages/vue/src/providers/index.ts` 以从
  `@vue-json-render/design-system` 导入 `provideDesignSystem`。
- 移除 `packages/vue/src/composables/useActions_fixed.ts`。
- 更新 `pnpm-lock.yaml` 引入 `zod` 依赖。

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
 # AI Model Configuration
-# Options: openai/gpt-4o, openai/gpt-4o-mini, anthropic/claude-3-5-sonnet, anthropic/claude-3-haiku
-AI_MODEL=openai/gpt-4o-mini
+# Options: qwen3-max, qwen-plus, qwen-turbo
+AI_MODEL=qwen3-max
+
+# Qwen API Configuration
+QWEN_API_KEY=your-qwen-api-key-here
+QWEN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 
 # AI Gateway (optional, if using Vercel AI Gateway)
 AI_GATEWAY_KEY=your-gateway-key-here
 
 # API Base URL (if using custom proxy)
 # AI_BASE_URL=https://your-proxy.com/v1
+
+# Application Settings
+NODE_ENV=development
