--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "ai": "^6.0.33",
+    "zod": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.4.0"
