--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -11,7 +11,8 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
-    }
+    },
+    "./components/*.vue": "./src/components/*.vue"
   },
   "files": ["dist"],
   "scripts": {
